reference-llvm/tests/should-fail/fail5.mu
// undeclared variable

function @entry foo() {
    x;
}
